tests/NormalTests/paczka1/small_fuzzy/77848994.err
Error in line 2: A47 A47 8,7
Error in line 4: WZ87 S824 40,9
Error in line 5: aJB5SFm S824 73,4
Error in line 1: SgHR0 A47 47,8
Error in line 10: NjWPW S824 30,3
Error in line 9: SgHR0 S824 91,5
